# kukukukukukuleczka.rs

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  build.rs.old
.github/workflows/: deploy.yml
src/: config.rs  cv_builder.rs  enums.rs  forms.rs  handlers.rs  jobs.rs  lib.rs  main.rs  pdf_builder.rs  utils.rs
