[package]
name = "kukuleczka-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros", "json"] }
axum-macros = "0.4.1"
dotenvy = "0.15.7"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
openai-api = "0.1.4"
openai_api_rust = "0.1.8"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
